terraform/aws/ec2/ec2.tf
resource "aws_instance" "workadventure_server" {
  ami                    = var.ami
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.workadventure_sg.id]
  iam_instance_profile   = aws_iam_instance_profile.workadventure_instance_profile.name

  root_block_device {
    volume_type = var.volume_type
    volume_size = var.volume_size
  }

  tags = {
    Name = "workadventure_server"
  }
}
